fix spacing

--- a/styles/components/_perks.scss
+++ b/styles/components/_perks.scss
@@ -1,7 +1,7 @@
 .perks {
   border-top: 1px solid #f3f3f3;
   display: flex;
-  gap: 20%;
+  gap: 12%;
   justify-content: space-between;
   padding: 3rem 0;
   text-align: center;
